Update TextViews to be 1/3 of height of the super view

--- a/QandA/QandA/Base.lproj/Main.storyboard
+++ b/QandA/QandA/Base.lproj/Main.storyboard
@@ -19,15 +19,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuestionCell" rowHeight="115" id="FNR-ze-ADJ" customClass="QuestionTableViewCell" customModule="QandA" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="115"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuestionCell" id="FNR-ze-ADJ" customClass="QuestionTableViewCell" customModule="QandA" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FNR-ze-ADJ" id="cC0-Eu-YsA">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="114.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YHj-Yr-9KG">
-                                            <rect key="frame" x="24" y="19" width="327" height="77"/>
+                                            <rect key="frame" x="24" y="19" width="327" height="77.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="NVt-d7-hV2">
                                                     <rect key="frame" x="0.0" y="0.0" width="130" height="20.5"/>
@@ -70,7 +70,7 @@
                                                     </constraints>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Yg-LC-7Uf">
-                                                    <rect key="frame" x="0.0" y="57" width="43" height="20"/>
+                                                    <rect key="frame" x="0.0" y="57" width="43" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -131,11 +131,8 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Question Here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IZT-oS-wy2">
-                                <rect key="frame" x="16" y="118" width="343" height="216"/>
+                                <rect key="frame" x="16" y="118" width="343" height="220"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="216" id="TRa-K0-Pz8"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -144,6 +141,7 @@
                         <constraints>
                             <constraint firstItem="16P-8H-hdf" firstAttribute="trailing" secondItem="xog-0N-w6v" secondAttribute="trailingMargin" id="5h8-km-lmN"/>
                             <constraint firstItem="16P-8H-hdf" firstAttribute="top" secondItem="h75-Ho-pub" secondAttribute="top" constant="16" id="Jna-1a-yPL"/>
+                            <constraint firstItem="IZT-oS-wy2" firstAttribute="height" secondItem="xog-0N-w6v" secondAttribute="height" multiplier="0.33" id="PXM-m4-Emd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="IZT-oS-wy2" secondAttribute="trailing" id="QrD-oO-7FV"/>
                             <constraint firstItem="IZT-oS-wy2" firstAttribute="leading" secondItem="xog-0N-w6v" secondAttribute="leadingMargin" id="c7W-9R-J0r"/>
                             <constraint firstItem="IZT-oS-wy2" firstAttribute="top" secondItem="16P-8H-hdf" secondAttribute="bottom" constant="8" id="nOc-th-M5s"/>
@@ -212,11 +210,8 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Answer Here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="y4D-ja-w5n">
-                                <rect key="frame" x="16" y="167" width="343" height="223"/>
+                                <rect key="frame" x="16" y="167" width="343" height="220"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="223" id="rQy-rs-PF1"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -231,6 +226,7 @@
                             <constraint firstItem="Jp1-4a-fxt" firstAttribute="leading" secondItem="N7p-aT-5o8" secondAttribute="leadingMargin" id="GyQ-Z5-ySZ"/>
                             <constraint firstItem="6En-qe-Mzl" firstAttribute="top" secondItem="2Rf-Y9-sgN" secondAttribute="top" constant="8" id="Se9-wa-Zjg"/>
                             <constraint firstItem="jgJ-Yj-kaq" firstAttribute="leading" secondItem="N7p-aT-5o8" secondAttribute="leadingMargin" id="TS9-xP-M7h"/>
+                            <constraint firstItem="y4D-ja-w5n" firstAttribute="height" secondItem="N7p-aT-5o8" secondAttribute="height" multiplier="0.33" id="mwn-LP-qsr"/>
                             <constraint firstItem="y4D-ja-w5n" firstAttribute="top" secondItem="Jp1-4a-fxt" secondAttribute="bottom" constant="8" id="ogw-4R-Ye6"/>
                             <constraint firstItem="y4D-ja-w5n" firstAttribute="leading" secondItem="N7p-aT-5o8" secondAttribute="leadingMargin" id="yFw-gR-jIq"/>
                         </constraints>
